<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/darkModeText"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/settingsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/batteryInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/batteryInformationText"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_battery_6_bar_24" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/networkInformtion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/networkInformationText"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_network_wifi_24" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/memoryInformationText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/memoryInformation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/memoryInformationText"
                        android:textStyle="bold" />
                    <!--                  <TextView-->
                    <!--                      android:id="@+id/memoryInformation"-->
                    <!--                       android:layout_height="wrap_content"-->
                    <!--                      android:layout_weight="6"-->
                    <!--                      android:text="Memory Information"-->
                    <!--                      android:textStyle="bold" />-->

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_memory_24" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/storageInformationText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/storageInformation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/storageInformationText"
                        android:textStyle="bold" />

                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_sd_storage_24" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp" />
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>